# dpspice-ecce2026

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PAPER_CODE_MISMATCHES.md  README.md  REPRODUCIBILITY.md  examples  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 01_quickstart.ipynb  02_envelope_vs_classical.ipynb  03_validation_against_ngspice.ipynb  04_nonlinear_rectifier.ipynb  05_ieee_network_scaling.ipynb  README.md
src/dpspice/: __init__.py  _ngspice.py  api.py  cli.py  compare.py  crossval.py  dispatch.py  examples.py  mcp_server.py  plotting.py  reproduce.py  results.py
src/dpspice/_engine/: __init__.py  mhdp.py  mna_circuit.py  netlist_parser.py  phasor.py
src/dpspice/_engine/models/: __init__.py  phasor_switch.py
src/dpspice/_engine/rectifier/: __init__.py  aft.py  device.py  hb_solver.py  ltspice_io.py  metrics.py  mna.py  reference_td.py
src/dpspice/data/examples/: rectifier_halfwave.raw  rectifier_halfwave.sp  rectifier_rc.sp  rlc.sp
src/dpspice/validation/: __init__.py  families.py  oracles.py  suite.py
tests/: conftest.py  golden_cases.py  golden_reference.json  test_cli_contract.py  test_determinism.py  test_envelope_flag.py  test_errors.py  test_golden.py  test_mcp_payload.py  test_packaged_examples.py  test_reproduce_consistency.py
